// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@bottom-navigation: component checks * additional appearance 1`] = `
<Wrapper
  appearance="noIndicator"
  forwardedRef={null}
>
  <ChildMock
    selected={false}
    title="Screen 1"
  />
  <ChildMock
    selected={true}
    title="Screen 2"
  />
  <ChildMock
    selected={false}
    testID="@tab/last"
    title="Screen 3"
  />
</Wrapper>
`;

exports[`@bottom-navigation: component checks * empty 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@bottom-navigation: component checks * with routes 1`] = `
<Wrapper
  forwardedRef={null}
  indicatorStyle={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <ChildMock
    selected={false}
    title="Screen 1"
  />
  <ChildMock
    selected={true}
    title="Screen 2"
  />
  <ChildMock
    selected={false}
    title="Screen 3"
  />
</Wrapper>
`;

exports[`@bottom-navigation-tab: component checks * empty 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@bottom-navigation-tab: component checks * text (styled) 1`] = `
<Wrapper
  forwardedRef={null}
  title="Test"
  titleStyle={
    Object {
      "color": "yellow",
      "fontSize": 22,
    }
  }
/>
`;

exports[`@bottom-navigation-tab: component checks * text/selected 1`] = `
<Wrapper
  forwardedRef={null}
  selected={true}
  title="Test"
/>
`;

exports[`@bottom-navigation-tab: component checks * text/unselected 1`] = `
<Wrapper
  forwardedRef={null}
  selected={false}
  title="Test"
/>
`;

exports[`@bottom-navigation-tab: component checks * with icon 1`] = `
<Wrapper
  forwardedRef={null}
  icon={[Function]}
/>
`;
